# Fraction

./: .gitignore  CMakeLists.txt  Fraction.cpp  Fraction.h  Main.cpp  README.md  fraction.cpp  fraction.hpp  fraction_exception.hpp  main.cpp  makefile
cmake/: config.hpp.in  utilities.cmake
examples/: 00_print_version.cpp  01_print_fraction.cpp  02_copy_semantics.cpp  03_move_semantics.cpp  04_addition_operators.cpp  05_subtraction_operators.cpp  06_multiplication_operators.cpp  07_division_operators.cpp  08_comparison_operators.cpp  CMakeLists.txt  main.cpp
include/: fraction.hpp
include/matho/: fraction.hpp  fraction_exception.hpp
lib/: fraction.cpp
tests/: CMakeLists.txt  addition_operators.cpp  calculation.cpp  calculation_with_int.cpp  comparison.cpp  comparison_operators.cpp  constructor.cpp  copy_semantics.cpp  division_operators.cpp  move_semantics.cpp  multiplication_operators.cpp  string_conversion.cpp  subtraction_operators.cpp
unit_testing/: check_comparison.cpp  check_comparison_with_int.cpp  test_calculation.cpp  test_calculation_with_int.cpp  test_comparison.cpp  test_comparison_with_int.cpp
